<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_handler_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/handler_activity"/>

            <Button
                android:id="@+id/btn_async_task_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/async_task_activity"/>

            <Button
                android:id="@+id/btn_inner_class_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inner_class_activity"/>

            <Button
                android:id="@+id/btn_thread_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thread_activity"/>

            <Button
                android:id="@+id/btn_static_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_activity"/>

            <Button
                android:id="@+id/btn_rx_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rx_activity"/>

        </LinearLayout>

    </ScrollView>

</merge>